Refactor data structures for players in lobbies and games to use LinkedHashMap